@@ -15,10 +15,13 @@ public class ReferralAnnouncementFilter extends PageData {
 
     @Builder
     public ReferralAnnouncementFilter(int pageSize, long offset, @Valid Set<Long> includeIds,
+                                      @Valid Set<String> authorIds, @Valid Set<Long> jobIds,
                                       @Valid Set<String> companyIds, @Valid Set<String> cities,
                                       @Valid Set<ProgrammingLanguage> languages) {
         super(pageSize, offset);
         this.includeIds = includeIds;
+        this.authorIds = authorIds;
+        this.jobIds = jobIds;
         this.companyIds = companyIds;
         this.cities = cities;
         this.languages = languages;
@@ -29,6 +32,18 @@ public class ReferralAnnouncementFilter extends PageData {
      */
     @Valid
     private Set<Long> includeIds;
+
+    /**
+     * Include author identifiers
+     */
+    @Valid
+    private Set<String> authorIds;
+
+    /**
+     * Include job identifiers
+     */
+    @Valid
+    private Set<Long> jobIds;
 
     /**
      * Include company identifiers
